Fixed Alignment on the Work Archive Page, Added and Styled the 404 Page

--- a/sass/base/elements/_lists.scss
+++ b/sass/base/elements/_lists.scss
@@ -5,7 +5,7 @@ ol {
 
 ul {
   margin: 0 0 2rem;
-  padding: 0;
+  padding: 0 1rem;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
