--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -11,7 +11,7 @@ h6 {
 h1 {
   margin: 0;
   font-size: 2.5rem;
-  padding: 6rem 0 2rem;
+  padding: 3rem 0 0;
   text-align: center;
 }
 
@@ -23,10 +23,13 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
+  text-align: center;
+  margin-top: 2rem auto 3rem;
 }
 
 @media screen and (min-width: 50em) {
   h1 {
     font-size: 3rem;
+    padding: 8rem 0 2rem;
   }
 }
