--- a/sass/components/pages/_homepage.scss
+++ b/sass/components/pages/_homepage.scss
@@ -7,6 +7,7 @@
     background-color: $red;
     color: $white;
     text-align: center;
+    padding: 8rem 1rem;
   }
 
   p {
